<resources>
    <string name="app_name">Prj_Agenda</string>
    <string name="main_title">Agenda de contatos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_title">Contato</string>
    <string name="edit_hint_name">Nome</string>
    <string name="edit_hint_tel">Telefone</string>
    <string name="edit_bt_save">Salvar</string>
    <string name="edit_desc_bt_salvar">Botão para salvar o contato</string>
    <string name="btn_add_new_contact">Botão para adicionar novo contato</string>
    <string name="et_name_contact">Inserir nome do contato</string>
    <string name="et_tel_contact">Telefone do novo contato</string>
    <string name="list_contacts">Lista de contatos</string>
    <string name="card_contact">Aperte para ir editar este contato</string>
</resources>
